Mon Aug 10 00:00:00 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm: Bump version number.

	* bin/mj_trigger: Only expire locks on the daily run.

	* lib/Mj/MTAConfig.pm (sendmail): Use $whoami instead of
 	'majordomo' in constructing default aliases.

	* lib/Majordomo.pm (_createlist): Pass in 'whoami'.

	* postinstall (do_config): Set 'whoami'.

	* Makefile.PL (configure): Ask for 'whoami'.

Sun Aug  9 11:11:26 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* bin/mj_trigger: Add code to expire locks after everything has
 	been closed down and disconnected.

	* lib/Majordomo.pm (list_config_set): Unlock config file after
 	each change by an interface.

Sat Aug  8 11:18:45 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Lock.pm (lock_master): New function; acquire the master
 	lock exclusively.
	Deal with master lockfile as an experiment.

	* lib/parser_data.pl: Added 'man' alias for 'help'.

	* bin/mj_shell (completer): Function to do completion for an
 	interactive mj_shell session.  Does commands, lists, and config
 	variables by calling the appropriate core functions.  Make
 	'noornaments' flag a negatable 'ornaments' flag, add
 	'aliascomplete' flag, and set default values for both of them.
  	Document 'aliascomplete' in manpage.
	(completer): Pay attention to 'aliascomplete'.
	(parse_interactive): Don't take any options; access the %opts hash
 	directly.  (No reason not to.)

	* lib/Majordomo.pm (list_config_set_to_default): Rewrite to call
 	inform.

	* README: Updated with new postinstall stuff and interactive shell
 	mode.  Also spellchecked.  (Finally.)

	* postinstall: Big changes to shut things up unless asked.

	* bin/mj_shell (parse_command): Redo the return codes; internalize
 	exit processing.
	$user is now a package global so the completer can see it.
	Turn on autoflush.

	* lib/parser_data.pl: Add some new aliases for exiting.

	* bin/mj_shell (parse_interactive): Quit line can have spaces.
